add scroll bar html and css

--- a/index.html
+++ b/index.html
@@ -35,7 +35,27 @@
 
   </div>
 </section>
-  <section id="scrolling-view"></section>
+  <section id="scrolling-view">
+<div class="scroll-left">
+    <p>
+      <span>Birds</span>
+      <span>+</span>
+      <span>Deer</span>
+      <span>+</span>
+      <span>Landscape</span>
+      <span>+</span>
+      <span>Wildlife</span>
+      <span>+</span>
+      <span>Forest</span>
+      <span>+</span>
+      <span>Flowers</span>
+      <span>+</span>
+      <span>Birds</span>
+      <span>+</span>
+      <span>Nature</span>
+    </p>
+</div>
+  </section>
   <section id="menu"></section>
   <section id="gallery"></section>
   <section id="footer"></section>
