add button menu html & css

--- a/index.html
+++ b/index.html
@@ -50,13 +50,17 @@
       <span>+</span>
       <span>Flowers</span>
       <span>+</span>
-      <span>Birds</span>
-      <span>+</span>
       <span>Nature</span>
     </p>
 </div>
   </section>
-  <section id="menu"></section>
+  <section id="button-menu">
+    <div class="button-menu-container">
+      <button>Gallery</button>
+    <button>Shop</button>
+    <button>Contact</button>
+    </div>
+  </section>
   <section id="gallery"></section>
   <section id="footer"></section>
 </body>
