--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <section id="navbar-section">
     <div class="navbar-left">
-            <img src="/assets/images/anita-cooke-submark-orange.png" alt="Anita Cooke submark logo.">
+      <img src="/assets/images/anita-cooke-submark-orange.png" alt="Anita Cooke submark logo.">
     </div>
     <div class="navbar-right">
       <a href="#gallery">GALLERY</a>
@@ -19,9 +19,9 @@
     </div>
   </section>
   <section id="hero"></section>
- <section id="about-me">
+<section id="about-me">
   <div class="photo-of-anita-cooke">
-    <img src="/assets/images/anita-cooke-with-camera.png" alt="A photo of Anita Cooke using camera.">
+    <img src="/assets/images/anita-cooke-with-camera-bw.jpg" alt="A photo of Anita Cooke using camera.">
   </div>
   <div class="about-anita-cooke">
 
