add mini gallery on home page

--- a/index.html
+++ b/index.html
@@ -57,7 +57,18 @@
     <button>Contact</button>
     </div>
   </section>
-  <section id="gallery"></section>
+<section id="gallery">
+  <div class="gallery-preview">
+    <img src="assets/images/bird-one.jpeg" alt="Bird on a branch" />
+    <img src="assets/images/bird-two.jpeg" alt="Bird on a perch" />
+    <img src="assets/images/bird-three.jpeg" alt="Bird on a stick" />
+    <img src="assets/images/bird-four.jpeg" alt="Bird on a post" />
+  </div>
+
+  <div class="gallery-button">
+    <button onclick="window.location.href='gallery.html'">SEE FULL GALLERY</button>
+  </div>
+</section>
   <section id="footer"></section>
 </body>
 </html>
