--- a/index.html
+++ b/index.html
@@ -31,25 +31,42 @@
     <button>VIEW MY GALLERY</button>
   </div>
 </section>
-  <section id="scrolling-view">
-<div class="scroll-left">
+<section id="scrolling-view">
+  <div class="scroll-left">
     <p>
-      <span>Birds</span>
-      <span>+</span>
-      <span>Deer</span>
-      <span>+</span>
-      <span>Landscape</span>
-      <span>+</span>
-      <span>Wildlife</span>
-      <span>+</span>
-      <span>Forest</span>
-      <span>+</span>
-      <span>Flowers</span>
-      <span>+</span>
-      <span>Nature</span>
+      <span>Birds</span><span></span><span></span><span></span>
+      <span>Deer</span><span></span><span></span><span></span>
+      <span>Landscape</span><span></span><span></span><span></span>
+      <span>Wildlife</span><span></span><span></span><span></span>
+      <span>Forest</span><span></span><span></span><span></span>
+      <span>Flowers</span><span></span><span></span><span></span>
+      <span>Nature</span><span></span><span></span><span></span>
+      <span>Birds</span><span></span><span></span><span></span>
+      <span>Deer</span><span></span><span></span><span></span>
+      <span>Landscape</span><span></span><span></span><span></span>
+      <span>Wildlife</span><span></span><span></span><span></span>
+      <span>Woods</span><span></span><span></span><span></span>
+      <span>Flowers</span><span></span><span></span><span></span>
+      <span>Nature</span><span></span><span></span><span></span>
+
+      <!-- 👇 duplicated once for seamless loop -->
+      <span>Birds</span><span></span><span></span><span></span>
+      <span>Deer</span><span></span><span></span><span></span>
+      <span>Landscape</span><span></span><span></span><span></span>
+      <span>Wildlife</span><span></span><span></span><span></span>
+      <span>Forest</span><span></span><span></span><span></span>
+      <span>Flowers</span><span></span><span></span><span></span>
+      <span>Nature</span><span></span><span></span><span></span>
+      <span>Birds</span><span></span><span></span><span></span>
+      <span>Deer</span><span></span><span></span><span></span>
+      <span>Landscape</span><span></span><span></span><span></span>
+      <span>Wildlife</span><span></span><span></span><span></span>
+      <span>Woods</span><span></span><span></span><span></span>
+      <span>Flowers</span><span></span><span></span><span></span>
+      <span>Nature</span><span></span><span></span><span></span>
     </p>
-</div>
-  </section>
+  </div>
+</section>
   <section id="button-menu">
     <div class="button-menu-container">
       <button>Gallery</button>
