removed large image files and updated html/css accordingly

--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
   <!-- NAVBAR -->
   <section id="navbar-section">
     <div class="navbar-left">
-      <img src="/assets/images/anita-cooke-submark-orange.png" alt="Anita Cooke submark logo.">
+      <img src="/assets/images/anita-cooke-secondary-logo.svg" alt="Anita Cooke submark logo.">
     </div>
     <div class="navbar-right">
       <a href="#gallery">GALLERY</a>
