--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <!-- NAVBAR -->
   <section id="navbar-section">
     <div class="navbar-left">
-      <img src="/assets/images/anita-cooke-submark-orange.png" alt="Anita Cooke submark logo.">
+      <img src="/assets/images/anita-cooke-secondary-logo.svg" alt="Anita Cooke secondary logo.">
     </div>
     <div class="navbar-right">
       <a href="gallery.html">GALLERY</a>
@@ -26,7 +26,7 @@
   <section id="hero"></section>
 <section id="about-me">
   <div class="photo-of-anita-cooke">
-    <img src="/assets/images/anita-cooke-with-camera-bw.jpg" alt="A photo of Anita Cooke using camera.">
+    <img src="/assets/images/anita-cooke-with-camera.jpg" alt="A photo of Anita Cooke using camera.">
   </div>
   <div class="about-anita-cooke">
     <div class="headline-wrapper">
@@ -84,10 +84,10 @@
 <!-- GALLERY   -->
 <section id="gallery">
   <div class="gallery-preview">
-    <img src="assets/images/bird-1.jpeg" alt="Bird on a branch" />
-    <img src="assets/images/bird-2.jpeg" alt="Bird on a perch" />
-    <img src="assets/images/bird-3.jpeg" alt="Bird on a stick" />
-    <img src="assets/images/bird-4.jpeg" alt="Bird on a post" />
+    <img src="assets/images/bird-one.jpg" alt="Bird on a branch" />
+    <img src="assets/images/bird-two.jpg" alt="Bird on a perch" />
+    <img src="assets/images/bird-three.jpg" alt="Bird on a stick" />
+    <img src="assets/images/bird-four.jpg" alt="Bird on a post" />
   </div>
   <div class="gallery-button">
     <button onclick="window.location.href='gallery.html'">SEE FULL GALLERY</button>
