add contact form, update html & css

--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
   <link rel="icon" type="image/png" href="assets/images/favicon-32x32.png">
 
 </head>
-<body>
+<>
   <!-- NAVBAR -->
   <section id="navbar-section">
     <div class="navbar-left">
@@ -23,9 +23,37 @@
       <button>BUY MY PRINTS</button>
     </div>
   </section>
+  <!-- HERO + CONTACT -->
+<section id="contact-hero">
+  <div class="hero-left">
+    <img src="/assets/images/bird-on-perch-hero.jpg" alt="Bird on perch">
+  </div>
+  <div class="hero-right">
+    <form action="#">
+      <h1><span>Get In Touch</span></h1>
+      <p>If you’d like to say hello, ask about a photo, or just share a kind word, feel free to reach out.</p>
 
+      <label for="fname">First Name</label>
+      <input type="text" id="fname" name="firstname" placeholder="First Name">
 
+      <label for="lname">Last Name</label>
+      <input type="text" id="lname" name="lastname" placeholder="Last Name">
 
+      <label for="email">Email</label>
+      <input type="text" id="email" name="email" placeholder="Email">
+
+      <label for="subject">Message</label>
+      <textarea id="subject" name="subject" style="height:200px"></textarea>
+
+      <input type="submit" value="SUBMIT">
+    </form>
+  </div>
+</section>
+<section id="photographer">
+  <div class="anita-cooke">
+    <img src="assets/images/anita-cooke-photographer.jpg">
+  </div>
+</section>
 
 
 <!-- FOOTER -->
