add title and animation to hero

--- a/index.html
+++ b/index.html
@@ -23,7 +23,12 @@
     </div>
   </section>
   <!-- HERO -->
-  <section id="hero"></section>
+<section id="hero">
+  <div class="indicator">
+    <h1>Anita Cooke</h1>
+    <h1>Photography</h1>
+  </div>
+</section>
   <section id="about-me">
     <div class="photo-of-anita-cooke">
       <img src="/assets/images/anita-cooke-photographer.jpg" alt="A photo of Anita Cooke using camera.">
@@ -45,14 +50,14 @@
       <span>Landscape</span><span></span><span></span><span></span>
       <span>Wildlife</span><span></span><span></span><span></span>
       <span>Forest</span><span></span><span></span><span></span>
-      <span>Flowers</span><span></span><span></span><span></span>
+      <span>Squirrel</span><span></span><span></span><span></span>
       <span>Nature</span><span></span><span></span><span></span>
       <span>Birds</span><span></span><span></span><span></span>
       <span>Deer</span><span></span><span></span><span></span>
       <span>Landscape</span><span></span><span></span><span></span>
       <span>Wildlife</span><span></span><span></span><span></span>
       <span>Woods</span><span></span><span></span><span></span>
-      <span>Flowers</span><span></span><span></span><span></span>
+      <span>Squirrel</span><span></span><span></span><span></span>
       <span>Nature</span><span></span><span></span><span></span>
 
       <!-- 👇 duplicated once for seamless loop -->
@@ -61,14 +66,14 @@
       <span>Landscape</span><span></span><span></span><span></span>
       <span>Wildlife</span><span></span><span></span><span></span>
       <span>Forest</span><span></span><span></span><span></span>
-      <span>Flowers</span><span></span><span></span><span></span>
+      <span>Squirrel</span><span></span><span></span><span></span>
       <span>Nature</span><span></span><span></span><span></span>
       <span>Birds</span><span></span><span></span><span></span>
       <span>Deer</span><span></span><span></span><span></span>
       <span>Landscape</span><span></span><span></span><span></span>
       <span>Wildlife</span><span></span><span></span><span></span>
       <span>Woods</span><span></span><span></span><span></span>
-      <span>Flowers</span><span></span><span></span><span></span>
+      <span>Squirrel</span><span></span><span></span><span></span>
       <span>Nature</span><span></span><span></span><span></span>
     </p>
   </div>
