update css and create response css

--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
   </section>
   <!-- HERO -->
 <section id="hero">
-  <div class="indicator">
-    <h1>Anita Cooke</h1>
-    <h1>Photography</h1>
+  <div class="hero-title">
+    <h1>Anita Cooke Photography</h1>
+    <!-- <h1>Photography</h1> -->
   </div>
 </section>
   <section id="about-me">
     <div class="photo-of-anita-cooke">
-      <img src="/assets/images/anita-cooke-photographer.jpg" alt="A photo of Anita Cooke using camera.">
+      <img src="/assets/images/anita-cooke-photographer-1.jpg" alt="A photo of Anita Cooke using camera.">
     </div>
   <div class="about-anita-cooke">
     <div class="headline-wrapper">
@@ -86,6 +86,7 @@
     <button>Contact</button>
     </div>
   </section>
+
 <!-- GALLERY   -->
 <section id="gallery">
   <div class="gallery-preview">
