--- a/contact.html
+++ b/contact.html
@@ -9,8 +9,9 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Cabin+Condensed&family=Playfair+Display+SC&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" href="assets/images/favicon-32x32.png">
-
 </head>
+<body>
+
   <!-- NAVBAR -->
   <section id="navbar-section">
     <div class="navbar-left">
