--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
   <title>Contact</title>
   <link rel="stylesheet" href="./css/base.css">
   <link rel="stylesheet" href="./css/contact.css">
+  <link rel="stylesheet" href="./css/index.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Cabin+Condensed&family=Playfair+Display+SC&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" href="assets/images/favicon-32x32.png">
@@ -50,6 +51,21 @@
       </form>
     </div>
   </section>
+
+
+    <!-- GALLERY   -->
+<section id="gallery">
+  <div class="gallery-preview">
+    <img src="assets/images/deer-1.jpg" alt="Deer peeking through trees" />
+    <img src="assets/images/squirrel-one.jpg" alt="Squirrel on perch" />
+    <img src="assets/images/deer-2.jpg" alt="Deer in focus" />
+    <img src="assets/images/squirrel-2.jpg" alt="Squirrel on birdhouse" />
+  </div>
+  <div class="gallery-button">
+    <button onclick="window.location.href='gallery.html'">SEE FULL GALLERY</button>
+  </div>
+</section>
+
 
   <!-- FOOTER -->
   <section id="footer">
