--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
 <section id="hero">
   <div class="hero-title">
     <h1>Anita Cooke Photography</h1>
-    <!-- <h1>Photography</h1> -->
   </div>
 </section>
   <section id="about-me">
@@ -38,7 +37,7 @@
       <h1><span>Hello,</span><br><span>I'm Anita!</span></h1>
     </div>
     <p>I’m originally from Germany and have always enjoyed capturing the beauty around me through photography. Whether it’s a quiet bird in the trees or a peaceful landscape, taking photos helps me slow down and appreciate the little things. It’s just a hobby, but it brings me a lot of joy.</p>
-    <button>VIEW MY GALLERY</button>
+    <button onclick="document.location='gallery.html'">VIEW MY GALLERY</button>
   </div>
 </section>
 <!-- SCROLL BAR -->
@@ -81,9 +80,10 @@
 <!-- BUTTON MENU -->
   <section id="button-menu">
     <div class="button-menu-container">
-      <button>Gallery</button>
-    <button>Shop</button>
-    <button>Contact</button>
+      <button onclick="document.location='gallery.html'">Gallery</button>
+    <!-- <button onclick="document.location='www.etsy.com'">Shop</button> -->
+    <a href="https://www.etsy.com/shop/YOURSHOPNAME" target="_blank" class="shop-button">Shop</a>
+    <button onclick="document.location='contact.html'">Contact</button>
     </div>
   </section>
 
@@ -116,8 +116,8 @@
     </div>
     <div class="company">
       <p>INFO</p>
-      <a href="#gallery">Gallery</a>
-      <a href="#contact">Contact</a>
+      <a href="gallery.html">Gallery</a>
+      <a href="contact.html">Contact</a>
     </div>
   </div>
 </section>
