updated gallery html and css

--- a/gallery.html
+++ b/gallery.html
@@ -26,8 +26,7 @@
 
   <!-- GALLERY HERO -->
   <section id="gallery-hero">
-    <h1>My Photography</h1>
-    <p>Just a few of my favorite moments captured through my lens.</p>
+    <h1>Gallery</h1>
   </section>
 
   <!-- GALLERY GRID -->
@@ -47,20 +46,20 @@
   <div class="footer-logo-and-social-icons">
     <img src="/assets/images/anita-cooke-photography-logo.png" alt="Logo of Anita Cooke Photography">
     <div class="social-icons">
-      <a href="#" class="fa fa-facebook"></a>
-      <a href="#" class="fa fa-flickr"></a>
-      <a href="#" class="fa fa-etsy"></a>
+      <a href="https://www.facebook.com/" class="fa fa-facebook"></a>
+      <a href="https://www.flickr.com/" class="fa fa-flickr"></a>
+      <a href="https://www.etsy.com" class="fa fa-etsy"></a>
     </div>
   </div>
   <div class="links">
-    <div class="services">
+    <div class="shop">
       <p>SHOP</p>
-      <a href="#">Buy Prints</a>
+      <a href="https://www.etsy.com">Buy Prints</a>
     </div>
-    <div class="company">
+    <div class="info">
       <p>INFO</p>
-      <a href="#gallery">Gallery</a>
-      <a href="#contact">Contact</a>
+      <a href="gallery.html">Gallery</a>
+      <a href="contact.html">Contact</a>
     </div>
   </div>
 </section>
