updated links and class names

--- a/index.html
+++ b/index.html
@@ -81,8 +81,7 @@
   <section id="button-menu">
     <div class="button-menu-container">
       <button onclick="document.location='gallery.html'">Gallery</button>
-    <!-- <button onclick="document.location='www.etsy.com'">Shop</button> -->
-    <a href="https://www.etsy.com/shop/YOURSHOPNAME" target="_blank" class="shop-button">Shop</a>
+    <a href="https://www.etsy.com" target="_blank" class="shop-button">Shop</a>
     <button onclick="document.location='contact.html'">Contact</button>
     </div>
   </section>
@@ -104,17 +103,17 @@
   <div class="footer-logo-and-social-icons">
     <img src="/assets/images/anita-cooke-photography-logo.png" alt="Logo of Anita Cooke Photography">
     <div class="social-icons">
-      <a href="#" class="fa fa-facebook"></a>
-      <a href="#" class="fa fa-flickr"></a>
-      <a href="#" class="fa fa-etsy"></a>
+      <a href="https://www.facebook.com/" class="fa fa-facebook"></a>
+      <a href="https://www.flickr.com/" class="fa fa-flickr"></a>
+      <a href="https://www.etsy.com" class="fa fa-etsy"></a>
     </div>
   </div>
   <div class="links">
-    <div class="services">
+    <div class="shop">
       <p>SHOP</p>
-      <a href="#">Buy Prints</a>
+      <a href="https://www.etsy.com">Buy Prints</a>
     </div>
-    <div class="company">
+    <div class="info">
       <p>INFO</p>
       <a href="gallery.html">Gallery</a>
       <a href="contact.html">Contact</a>
