--- a/gallery.html
+++ b/gallery.html
@@ -8,14 +8,14 @@
   <link rel="stylesheet" href="./css/gallery.css">
   <link href="https://fonts.googleapis.com/css2?family=Cabin+Condensed&family=Playfair+Display+SC&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="icon" type="image/png" href="assets/images/favicon-32x32.png">
+  <link rel="icon" type="image/png" href="assets/images/graphics/favicon-32x32.png">
 </head>
 <body>
 
   <!-- NAVBAR -->
   <section id="navbar-section">
     <div class="navbar-left">
-      <img src="/assets/images/anita-cooke-secondary-logo.svg" alt="Logo">
+      <img src="/assets/images/graphics/anita-cooke-secondary-logo.svg" alt="Logo">
     </div>
     <div class="navbar-right">
       <a href="index.html">HOME</a>
@@ -38,13 +38,20 @@
       <img src="assets/images/bird-four.jpg" alt="Bird Four">
       <img src="assets/images/deer-1.jpg" alt="Bird Five">
       <img src="assets/images/deer-2.jpg" alt="Bird Six">
+
+        <img src="assets/images/bird-one.jpg" alt="Bird One">
+      <img src="assets/images/bird-two.jpg" alt="Bird Two">
+      <img src="assets/images/bird-three.jpg" alt="Bird Three">
+      <img src="assets/images/bird-four.jpg" alt="Bird Four">
+      <img src="assets/images/deer-1.jpg" alt="Bird Five">
+      <img src="assets/images/deer-2.jpg" alt="Bird Six">
     </div>
   </section>
 
 <!-- FOOTER -->
 <section id="footer">
   <div class="footer-logo-and-social-icons">
-    <img src="/assets/images/anita-cooke-photography-logo.png" alt="Logo of Anita Cooke Photography">
+    <img src="/assets/images/graphics/anita-cooke-photography-logo.png" alt="Logo of Anita Cooke Photography">
     <div class="social-icons">
       <a href="https://www.facebook.com/" class="fa fa-facebook"></a>
       <a href="https://www.flickr.com/" class="fa fa-flickr"></a>
