add home to footer and add images to gallery

--- a/gallery.html
+++ b/gallery.html
@@ -36,15 +36,26 @@
       <img src="assets/images/bird-two.jpg" alt="Bird Two">
       <img src="assets/images/bird-three.jpg" alt="Bird Three">
       <img src="assets/images/bird-four.jpg" alt="Bird Four">
-      <img src="assets/images/deer-1.jpg" alt="Bird Five">
-      <img src="assets/images/deer-2.jpg" alt="Bird Six">
+      <img src="assets/images/bird-19.jpg" alt="Deer One">
+      <img src="assets/images/deer-2.jpg" alt="Deer Two">
 
-        <img src="assets/images/bird-one.jpg" alt="Bird One">
-      <img src="assets/images/bird-two.jpg" alt="Bird Two">
-      <img src="assets/images/bird-three.jpg" alt="Bird Three">
-      <img src="assets/images/bird-four.jpg" alt="Bird Four">
-      <img src="assets/images/deer-1.jpg" alt="Bird Five">
-      <img src="assets/images/deer-2.jpg" alt="Bird Six">
+      <img src="assets/images/bird-five.jpg" alt="Bird Five">
+      <img src="assets/images/bird-six.jpg" alt="Bird Six">
+      <img src="assets/images/bird-seven.jpg" alt="Bird Seven">
+      <img src="assets/images/bird-eight.jpg" alt="Bird Eight">
+      <img src="assets/images/bird-nine.jpg" alt="Bird Nine">
+      <img src="assets/images/bird-ten.jpg" alt="Bird Ten">
+
+      <img src="assets/images/bird-12.jpg" alt="Bird Twelve">
+      <img src="assets/images/bird-13.jpg" alt="Bird Thirteen">
+      <img src="assets/images/bird-15.jpg" alt="Bird Fifteen">
+      <img src="assets/images/squirrel-one.jpg" alt="Squirrel One">
+      <img src="assets/images/squirrel-2.jpg" alt="Squirrel Two">
+      <img src="assets/images/bird-16.jpg" alt="Bird Sixteen">
+
+      <img src="assets/images/bird-17.jpg" alt="Bird Seventeen">
+      <img src="assets/images/bird-18.jpg" alt="Bird Eighteen">
+      <img src="assets/images/bird-19.jpg" alt="Bird Nineteen">
     </div>
   </section>
 
@@ -65,6 +76,7 @@
     </div>
     <div class="info">
       <p>INFO</p>
+      <a href="home.html">Home</a>
       <a href="gallery.html">Gallery</a>
       <a href="contact.html">Contact</a>
     </div>
