--- a/contact.html
+++ b/contact.html
@@ -97,6 +97,7 @@
     </div>
     <div class="info">
       <p>INFO</p>
+      <a href="home.html">Home</a>
       <a href="gallery.html">Gallery</a>
       <a href="contact.html">Contact</a>
     </div>
