--- a/thank-you.html
+++ b/thank-you.html
@@ -47,6 +47,7 @@
     </div>
     <div class="info">
       <p>INFO</p>
+      <a href="home.html">Home</a>
       <a href="gallery.html">Gallery</a>
       <a href="contact.html">Contact</a>
     </div>
