add lazy loading

--- a/gallery.html
+++ b/gallery.html
@@ -31,33 +31,33 @@
 
   <!-- GALLERY GRID -->
   <section id="gallery-grid">
-    <div class="gallery-container">
-      <img src="assets/images/bird-one.jpg" alt="Bird One">
-      <img src="assets/images/bird-two.jpg" alt="Bird Two">
-      <img src="assets/images/bird-three.jpg" alt="Bird Three">
-      <img src="assets/images/bird-four.jpg" alt="Bird Four">
-      <img src="assets/images/bird-19.jpg" alt="Deer One">
-      <img src="assets/images/deer-2.jpg" alt="Deer Two">
+  <div class="gallery-container">
+    <img src="assets/images/bird-one.jpg" alt="Bird One" loading="lazy">
+    <img src="assets/images/bird-two.jpg" alt="Bird Two" loading="lazy">
+    <img src="assets/images/bird-three.jpg" alt="Bird Three" loading="lazy">
+    <img src="assets/images/bird-four.jpg" alt="Bird Four" loading="lazy">
+    <img src="assets/images/bird-19.jpg" alt="Deer One" loading="lazy">
+    <img src="assets/images/deer-2.jpg" alt="Deer Two" loading="lazy">
 
-      <img src="assets/images/bird-five.jpg" alt="Bird Five">
-      <img src="assets/images/bird-six.jpg" alt="Bird Six">
-      <img src="assets/images/bird-seven.jpg" alt="Bird Seven">
-      <img src="assets/images/bird-eight.jpg" alt="Bird Eight">
-      <img src="assets/images/bird-nine.jpg" alt="Bird Nine">
-      <img src="assets/images/bird-ten.jpg" alt="Bird Ten">
+    <img src="assets/images/bird-five.jpg" alt="Bird Five" loading="lazy">
+    <img src="assets/images/bird-six.jpg" alt="Bird Six" loading="lazy">
+    <img src="assets/images/bird-seven.jpg" alt="Bird Seven" loading="lazy">
+    <img src="assets/images/bird-eight.jpg" alt="Bird Eight" loading="lazy">
+    <img src="assets/images/bird-nine.jpg" alt="Bird Nine" loading="lazy">
+    <img src="assets/images/bird-ten.jpg" alt="Bird Ten" loading="lazy">
 
-      <img src="assets/images/bird-12.jpg" alt="Bird Twelve">
-      <img src="assets/images/bird-13.jpg" alt="Bird Thirteen">
-      <img src="assets/images/bird-15.jpg" alt="Bird Fifteen">
-      <img src="assets/images/squirrel-one.jpg" alt="Squirrel One">
-      <img src="assets/images/squirrel-2.jpg" alt="Squirrel Two">
-      <img src="assets/images/bird-16.jpg" alt="Bird Sixteen">
+    <img src="assets/images/bird-12.jpg" alt="Bird Twelve" loading="lazy">
+    <img src="assets/images/bird-13.jpg" alt="Bird Thirteen" loading="lazy">
+    <img src="assets/images/bird-15.jpg" alt="Bird Fifteen" loading="lazy">
+    <img src="assets/images/squirrel-one.jpg" alt="Squirrel One" loading="lazy">
+    <img src="assets/images/squirrel-2.jpg" alt="Squirrel Two" loading="lazy">
+    <img src="assets/images/bird-16.jpg" alt="Bird Sixteen" loading="lazy">
 
-      <img src="assets/images/bird-17.jpg" alt="Bird Seventeen">
-      <img src="assets/images/bird-18.jpg" alt="Bird Eighteen">
-      <img src="assets/images/bird-19.jpg" alt="Bird Nineteen">
-    </div>
-  </section>
+    <img src="assets/images/bird-17.jpg" alt="Bird Seventeen" loading="lazy">
+    <img src="assets/images/bird-18.jpg" alt="Bird Eighteen" loading="lazy">
+    <img src="assets/images/bird-19.jpg" alt="Bird Nineteen" loading="lazy">
+  </div>
+</section>
 
 <!-- FOOTER -->
 <section id="footer">
