add links and add email address

--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
     </div>
     <div class="hero-right">
 <!-- TODO -->
-<form action="https://formsubmit.co/YOUR_EMAIL_HERE" method="POST">
+<form action="https://formsubmit.co/d6c030df8c701e3ed81df446476d3c62" method="POST">
   <h1><span>Get In Touch</span></h1>
   <p>If you’d like to ask about a photo or just share a kind word, feel free to reach out.</p>
 
@@ -97,7 +97,7 @@
     </div>
     <div class="info">
       <p>INFO</p>
-      <a href="home.html">Home</a>
+      <a href="index.html">Home</a>
       <a href="gallery.html">Gallery</a>
       <a href="contact.html">Contact</a>
     </div>
