--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
   <div class="footer-logo-and-social-icons">
     <img src="/assets/images//graphics/anita-cooke-photography-logo.png" alt="Logo of Anita Cooke Photography">
     <div class="social-icons">
-      <a href="https://www.facebook.com/" class="fa fa-facebook"></a>
-      <a href="https://www.flickr.com/" class="fa fa-flickr"></a>
+      <a href="https://www.facebook.com/groups/989120233288366" class="fa fa-facebook"></a>
+      <a href="https://www.flickr.com/photos/202656504@N08" class="fa fa-flickr"></a>
       <a href="https://www.etsy.com" class="fa fa-etsy"></a>
     </div>
   </div>
@@ -115,7 +115,7 @@
     </div>
     <div class="info">
       <p>INFO</p>
-      <a href="home.html">Home</a>
+      <a href="index.html">Home</a>
       <a href="gallery.html">Gallery</a>
       <a href="contact.html">Contact</a>
     </div>
