add copyright to footer and adjusted button css and title css

--- a/contact.html
+++ b/contact.html
@@ -102,6 +102,9 @@
       <a href="contact.html">Contact</a>
     </div>
   </div>
+  <div class="footer-credit">
+  <p>Design by Melhey Design Co. © 2025. All rights reserved.</p>
+</div>
 </section>
 </body>
 </html>
