--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
   <!-- HERO -->
 <section id="hero">
   <div class="hero-title">
-    <h1>Anita Cooke Photography</h1>
+    <!-- <h1>Anita Cooke Photography</h1> -->
+    <h1 id="anita-cooke-title">Anita Cooke</h1>
+    <h1 id="photography-title">photography</h1>
   </div>
 </section>
   <section id="about-me">
@@ -120,6 +122,9 @@
       <a href="contact.html">Contact</a>
     </div>
   </div>
+    <div class="footer-credit">
+  <p>Design by Melhey Design Co. © 2025. All rights reserved.</p>
+</div>
 </section>
 </body>
 </html>
