add and comment out etsy and pinterest for now;

--- a/contact.html
+++ b/contact.html
@@ -87,7 +87,8 @@
     <div class="social-icons">
       <a href="https://www.facebook.com/groups/989120233288366" class="fa fa-facebook"></a>
       <a href="https://www.flickr.com/photos/202656504@N08" class="fa fa-flickr"></a>
-      <a href="https://www.etsy.com" class="fa fa-etsy"></a>
+      <!-- <a href="https://www.etsy.com" class="fa fa-etsy"></a>
+      <a href="#" class="fa fa-pinterest"></a> -->
     </div>
   </div>
   <div class="links">
