--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
 <!-- BUTTON MENU -->
   <section id="button-menu">
     <div class="button-menu-container">
-      <button onclick="document.location='gallery.html'">Gallery</button>
-    <a href="https://www.etsy.com" target="_blank" class="shop-button">Shop</a>
+    <button onclick="document.location='gallery.html'">Gallery</button>
+    <button onclick="window.open('https://www.etsy.com', '_blank')">Shop</button>
     <button onclick="document.location='contact.html'">Contact</button>
     </div>
   </section>
@@ -106,7 +106,8 @@
     <div class="social-icons">
       <a href="https://www.facebook.com/groups/989120233288366" class="fa fa-facebook"></a>
       <a href="https://www.flickr.com/photos/202656504@N08" class="fa fa-flickr"></a>
-      <a href="https://www.etsy.com" class="fa fa-etsy"></a>
+      <!-- <a href="https://www.etsy.com" class="fa fa-etsy"></a> -->
+      <!-- <a href="#" class="fa fa-pinterest"></a> -->
     </div>
   </div>
   <div class="links">
