--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Anita Cooke Photography</title>
+  <title>Anita's Wild Backyard Photography</title>
   <link rel="stylesheet" href="./css/base.css">
   <link rel="stylesheet" href="./css/index.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -14,7 +14,7 @@
   <!-- NAVBAR -->
   <section id="navbar-section">
     <div class="navbar-left">
-      <img src="/assets/images/graphics/anita-cooke-secondary-logo.svg" alt="Anita Cooke secondary logo.">
+      <img src="/assets/images/graphics/anitas-wild-backyard-photography-sm.svg" alt="Anita secondary logo.">
     </div>
     <div class="navbar-right">
       <a href="gallery.html">GALLERY</a>
@@ -25,15 +25,16 @@
   <!-- HERO -->
 <section id="hero">
   <div class="hero-title">
-    <h1 id="anita-cooke-title">Anita Cooke</h1>
+    <h1 id="anita-title">Anita's Wild</h1>
+    <h1 id="anita-2">backyard</h1>
     <h1 id="photography-title">photography</h1>
   </div>
 </section>
   <section id="about-me">
-    <div class="photo-of-anita-cooke">
-      <img src="/assets/images/anita-cooke-photographer-1.jpg" alt="A photo of Anita Cooke using camera.">
+    <div class="photo-of-anita">
+      <img src="/assets/images/anita-photographer.jpg" alt="A photo of Anita using camera.">
     </div>
-  <div class="about-anita-cooke">
+  <div class="about-anita">
     <div class="headline-wrapper">
       <h1><span>Hello,</span><br><span>I'm Anita!</span></h1>
     </div>
@@ -102,7 +103,7 @@
 <!-- FOOTER -->
 <section id="footer">
   <div class="footer-logo-and-social-icons">
-    <img src="/assets/images//graphics/anita-cooke-photography-logo.png" alt="Logo of Anita Cooke Photography">
+    <img src="/assets/images//graphics/anitas-wild-backyard-photography.svg" alt="Logo of Anita Photography">
     <div class="social-icons">
       <a href="https://www.facebook.com/groups/989120233288366" class="fa fa-facebook"></a>
       <a href="https://www.flickr.com/photos/202656504@N08" class="fa fa-flickr"></a>
