--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
   <!-- NAVBAR -->
   <section id="navbar-section">
     <div class="navbar-left">
-      <img src="/assets/images/graphics/anita-cooke-secondary-logo.svg" alt="Anita Cooke submark logo.">
+      <img src="/assets/images/graphics/anitas-wild-backyard-photography-sm.svg" alt="Anita's Wild Backyard Photography submark">
     </div>
     <div class="navbar-right">
       <a href="gallery.html">GALLERY</a>
@@ -83,7 +83,7 @@
 <!-- FOOTER -->
 <section id="footer">
   <div class="footer-logo-and-social-icons">
-    <img src="/assets/images/graphics/anita-cooke-photography-logo.png" alt="Logo of Anita Cooke Photography">
+    <img src="/assets/images/graphics/anitas-wild-backyard-photography.svg" alt="Logo of Anita's Wild Backyard Photography">
     <div class="social-icons">
       <a href="https://www.facebook.com/groups/989120233288366" class="fa fa-facebook"></a>
       <a href="https://www.flickr.com/photos/202656504@N08" class="fa fa-flickr"></a>
