comment out links and add domain

--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
     <div class="navbar-right">
       <a href="gallery.html">GALLERY</a>
       <a href="index.html">HOME</a>
-      <button>BUY MY PRINTS</button>
+      <!-- <button>BUY MY PRINTS</button> -->
     </div>
   </section>
 
@@ -49,15 +49,13 @@
   <textarea name="message" id="message" rows="6" required></textarea>
 
   <!-- Redirect to thank you page -->
-  <!-- TODO -->
-  <input type="hidden" name="_next" value="https://YOUR_DOMAIN_HERE/thank-you.html">
+  <input type="hidden" name="_next" value="https://anitaswildbackyardphotography.com/thank-you.html">
 
   <!-- Anti-spam honeypot -->
   <input type="text" name="_honey" style="display:none">
 
-  <!-- TODO -->
   <!-- Only allow submissions from your real domain -->
-  <input type="hidden" name="_origin" value="https://YOUR_DOMAIN_HERE">
+  <input type="hidden" name="_origin" value="https://anitaswildbackyardphotography.com">
 
   <!-- Leave CAPTCHA enabled (recommended) -->
   <!-- If you *do* want to disable it: -->
@@ -83,18 +81,19 @@
 <!-- FOOTER -->
 <section id="footer">
   <div class="footer-logo-and-social-icons">
-    <img src="/assets/images/graphics/anitas-wild-backyard-photography.svg" alt="Logo of Anita's Wild Backyard Photography">
+    <img src="/assets/images//graphics/anitas-wild-backyard-photography.svg" alt="Logo of Anita Photography">
     <div class="social-icons">
       <a href="https://www.facebook.com/groups/989120233288366" class="fa fa-facebook"></a>
       <a href="https://www.flickr.com/photos/202656504@N08" class="fa fa-flickr"></a>
-      <!-- <a href="https://www.etsy.com" class="fa fa-etsy"></a>
-      <a href="#" class="fa fa-pinterest"></a> -->
+      <!-- <a href="https://www.etsy.com" class="fa fa-redbubble"></a> -->
+      <!-- <a href="https://www.etsy.com" class="fa fa-etsy"></a> -->
+      <a href="https://www.pinterest.com/anitaswildbackyardphotography" class="fa fa-pinterest"></a>
     </div>
   </div>
   <div class="links">
     <div class="shop">
-      <p>SHOP</p>
-      <a href="https://www.etsy.com">Buy Prints</a>
+      <!-- <p>SHOP</p>
+      <a href="https://www.etsy.com">Buy Prints</a> -->
     </div>
     <div class="info">
       <p>INFO</p>
@@ -103,7 +102,7 @@
       <a href="contact.html">Contact</a>
     </div>
   </div>
-  <div class="footer-credit">
+    <div class="footer-credit">
   <p>Design by Melhey Design Co. © 2025. All rights reserved.</p>
 </div>
 </section>
