--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="navbar-right">
       <a href="gallery.html">GALLERY</a>
       <a href="contact.html">CONTACT</a>
-      <button>BUY MY PRINTS</button>
+      <!-- <button>BUY MY PRINTS</button> -->
     </div>
   </section>
   <!-- HERO -->
@@ -83,7 +83,7 @@
   <section id="button-menu">
     <div class="button-menu-container">
     <button onclick="document.location='gallery.html'">Gallery</button>
-    <button onclick="window.open('https://www.etsy.com', '_blank')">Shop</button>
+    <!-- <button onclick="window.open('https://www.etsy.com', '_blank')">Shop</button> -->
     <button onclick="document.location='contact.html'">Contact</button>
     </div>
   </section>
@@ -107,14 +107,15 @@
     <div class="social-icons">
       <a href="https://www.facebook.com/groups/989120233288366" class="fa fa-facebook"></a>
       <a href="https://www.flickr.com/photos/202656504@N08" class="fa fa-flickr"></a>
+      <!-- <a href="https://www.etsy.com" class="fa fa-redbubble"></a> -->
       <!-- <a href="https://www.etsy.com" class="fa fa-etsy"></a> -->
-      <!-- <a href="#" class="fa fa-pinterest"></a> -->
+      <a href="https://www.pinterest.com/anitaswildbackyardphotography" class="fa fa-pinterest"></a>
     </div>
   </div>
   <div class="links">
     <div class="shop">
-      <p>SHOP</p>
-      <a href="https://www.etsy.com">Buy Prints</a>
+      <!-- <p>SHOP</p>
+      <a href="https://www.etsy.com">Buy Prints</a> -->
     </div>
     <div class="info">
       <p>INFO</p>
