--- a/thank-you.html
+++ b/thank-you.html
@@ -20,6 +20,7 @@
     <div class="navbar-right">
       <a href="index.html">HOME</a>
       <a href="gallery.html">GALLERY</a>
+      <!-- <button>BUY MY PRINTS</button> -->
     </div>
   </section>
 
@@ -33,19 +34,19 @@
 <!-- FOOTER -->
 <section id="footer">
   <div class="footer-logo-and-social-icons">
-    <img src="/assets/images/graphics/anitas-wild-backyard-photography.svg" alt="Logo of Anita's Wild Backyard Photography">
+    <img src="/assets/images//graphics/anitas-wild-backyard-photography.svg" alt="Logo of Anita Photography">
     <div class="social-icons">
       <a href="https://www.facebook.com/groups/989120233288366" class="fa fa-facebook"></a>
       <a href="https://www.flickr.com/photos/202656504@N08" class="fa fa-flickr"></a>
+      <!-- <a href="https://www.etsy.com" class="fa fa-redbubble"></a> -->
       <!-- <a href="https://www.etsy.com" class="fa fa-etsy"></a> -->
-      <!-- <a href="#" class="fa fa-pinterest"></a> -->
-
+      <a href="https://www.pinterest.com/anitaswildbackyardphotography" class="fa fa-pinterest"></a>
     </div>
   </div>
   <div class="links">
     <div class="shop">
-      <p>SHOP</p>
-      <a href="https://www.etsy.com">Buy Prints</a>
+      <!-- <p>SHOP</p>
+      <a href="https://www.etsy.com">Buy Prints</a> -->
     </div>
     <div class="info">
       <p>INFO</p>
@@ -58,6 +59,5 @@
   <p>Design by Melhey Design Co. © 2025. All rights reserved.</p>
 </div>
 </section>
-
 </body>
 </html>
