--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="headline-wrapper">
       <h1><span>Hello,</span><br><span>I'm Anita!</span></h1>
     </div>
-    <p>I’m originally from Germany, nestled near the edge of the Black Forest. I’m a wife, a mother to two daughters, and a proud Oma of two. I’ve always enjoyed capturing the beauty around me through photography. Whether it’s a quiet bird in the trees or a peaceful landscape, taking photos helps me slow down and appreciate the little things. It’s just a hobby, but it brings me a lot of joy.</p>
+    <p>I’m originally from Germany, nestled near the edge of the Black Forest. I’m a wife, a mother to two daughters, and a proud Oma of two. I’ve always enjoyed capturing the beauty around me through photography. Whether it’s a quiet bird in the trees or a peaceful landscape, taking photos helps me slow down and appreciate the little things. It’s just a hobby, but it brings me a lot of joy!</p>
     <button onclick="document.location='gallery.html'">VIEW MY GALLERY</button>
   </div>
 </section>
