remove contact and thank you pages

--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
     </div>
     <div class="navbar-right">
       <a href="gallery.html">GALLERY</a>
-      <a href="contact.html">CONTACT</a>
+      <a href="https://www.facebook.com/groups/989120233288366">FACEBOOK</a>
+      <a href="https://www.pinterest.com/anitaswildbackyardphotography">PINTEREST</a>
+      <a href="https://www.flickr.com/photos/202656504@N08">FLICKR</a>
+      <!-- <a href="contact.html">CONTACT</a> -->
       <!-- <button>BUY MY PRINTS</button> -->
     </div>
   </section>
@@ -83,8 +86,11 @@
   <section id="button-menu">
     <div class="button-menu-container">
     <button onclick="document.location='gallery.html'">Gallery</button>
+    <button onclick="window.open('https://www.facebook.com/groups/989120233288366', '_blank')">Facebook</button>
+    <button onclick="window.open('https://www.facebook.com/groups/989120233288366', '_blank')">Flickr</button>
+    <button onclick="window.open('https://www.flickr.com/photos/202656504@N08', '_blank')">Pinterest</button>
     <!-- <button onclick="window.open('https://www.etsy.com', '_blank')">Shop</button> -->
-    <button onclick="document.location='contact.html'">Contact</button>
+    <!-- <button onclick="document.location='contact.html'">Contact</button> -->
     </div>
   </section>
 
@@ -107,8 +113,6 @@
     <div class="social-icons">
       <a href="https://www.facebook.com/groups/989120233288366" class="fa fa-facebook"></a>
       <a href="https://www.flickr.com/photos/202656504@N08" class="fa fa-flickr"></a>
-      <!-- <a href="https://www.etsy.com" class="fa fa-redbubble"></a> -->
-      <!-- <a href="https://www.etsy.com" class="fa fa-etsy"></a> -->
       <a href="https://www.pinterest.com/anitaswildbackyardphotography" class="fa fa-pinterest"></a>
     </div>
   </div>
@@ -121,7 +125,7 @@
       <p>INFO</p>
       <a href="index.html">Home</a>
       <a href="gallery.html">Gallery</a>
-      <a href="contact.html">Contact</a>
+      <!-- <a href="contact.html">Contact</a> -->
     </div>
   </div>
     <div class="footer-credit">
