--- a/gallery.html
+++ b/gallery.html
@@ -13,17 +13,19 @@
 <body>
 
   <!-- NAVBAR -->
-  <section id="navbar-section">
+<section id="navbar-section">
     <div class="navbar-left">
-      <img src="/assets/images/graphics/awbyp-submark.svg" alt="Logo">
+      <img src="/assets/images/graphics/awbyp-submark.svg" alt="Anita secondary logo.">
     </div>
     <div class="navbar-right">
       <a href="index.html">HOME</a>
-      <a href="contact.html">CONTACT</a>
+      <a href="https://www.facebook.com/groups/989120233288366">FACEBOOK</a>
+      <a href="https://www.pinterest.com/anitaswildbackyardphotography">PINTEREST</a>
+      <a href="https://www.flickr.com/photos/202656504@N08">FLICKR</a>
+      <!-- <a href="contact.html">CONTACT</a> -->
       <!-- <button>BUY MY PRINTS</button> -->
     </div>
   </section>
-
   <!-- GALLERY HERO -->
   <section id="gallery-hero">
     <h1>Gallery</h1>
@@ -80,7 +82,7 @@
       <p>INFO</p>
       <a href="index.html">Home</a>
       <a href="gallery.html">Gallery</a>
-      <a href="contact.html">Contact</a>
+      <!-- <a href="contact.html">Contact</a> -->
     </div>
   </div>
     <div class="footer-credit">
